<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_add_a_photo_black_24dp"
            android:title="@string/nav_camera" />
        <item
            android:id="@+id/nav_share_string"
            android:icon="@drawable/ic_textsms_black_24dp"
            android:title="@string/nav_share"
            />

        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/nav_call" />

        <item
            android:id="@+id/nav_emi"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="Emi calculator" />

        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="Person add" />
    </group>
</menu>